// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Validate wordSplitter > Extract all possible word breaks to '32bit-checksum' 1`] = `
[
  "bit|checksum",
  "bit|-checksum",
  "bit-|checksum",
  "bit-checksum",
  "32bit|checksum",
  "32bit|-checksum",
  "32bit-|checksum",
  "32bit-checksum",
  "32|bit|checksum",
  "32|bit|-checksum",
  "32|bit-|checksum",
  "32|bit-checksum",
]
`;

exports[`Validate wordSplitter > Extract all possible word breaks to 'ERRORCode' 1`] = `
[
  "ERROR|Code",
  "ERRORC|ode",
  "ERRORCode",
]
`;

exports[`Validate wordSplitter > Extract all possible word breaks to 'MOVSX_r_rm16' 1`] = `
[
  "MOVSX|r|rm",
  "MOVSX|r|rm|16",
  "MOVSX|r|rm16",
  "MOVSX|r|_rm",
  "MOVSX|r|_rm|16",
  "MOVSX|r|_rm16",
  "MOVSX|r_|rm",
  "MOVSX|r_|rm|16",
  "MOVSX|r_|rm16",
  "MOVSX|r_rm",
  "MOVSX|r_rm|16",
  "MOVSX|r_rm16",
  "MOVSX|_r|rm",
  "MOVSX|_r|rm|16",
  "MOVSX|_r|rm16",
  "MOVSX|_r|_rm",
  "MOVSX|_r|_rm|16",
  "MOVSX|_r|_rm16",
  "MOVSX|_r_|rm",
  "MOVSX|_r_|rm|16",
  "MOVSX|_r_|rm16",
  "MOVSX|_r_rm",
  "MOVSX|_r_rm|16",
  "MOVSX|_r_rm16",
  "MOVSX_|r|rm",
  "MOVSX_|r|rm|16",
  "MOVSX_|r|rm16",
  "MOVSX_|r|_rm",
  "MOVSX_|r|_rm|16",
  "MOVSX_|r|_rm16",
  "MOVSX_|r_|rm",
  "MOVSX_|r_|rm|16",
  "MOVSX_|r_|rm16",
  "MOVSX_|r_rm",
  "MOVSX_|r_rm|16",
  "MOVSX_|r_rm16",
  "MOVSX_r|rm",
  "MOVSX_r|rm|16",
  "MOVSX_r|rm16",
  "MOVSX_r|_rm",
  "MOVSX_r|_rm|16",
  "MOVSX_r|_rm16",
  "MOVSX_r_|rm",
  "MOVSX_r_|rm|16",
  "MOVSX_r_|rm16",
  "MOVSX_r_rm",
  "MOVSX_r_rm|16",
  "MOVSX_r_rm16",
]
`;

exports[`Validate wordSplitter > Extract all possible word breaks to 'camelCase' 1`] = `
[
  "camel|Case",
  "camelCase",
]
`;

exports[`Validate wordSplitter > Extract all possible word breaks to 'hello' 1`] = `
[
  "hello",
]
`;

exports[`Validate wordSplitter > Extract all possible word breaks to 'markUIAsReady' 1`] = `
[
  "mark|UI|As|Ready",
  "mark|UI|A|Ready",
  "mark|UI|AsReady",
  "mark|UIA|s|Ready",
  "mark|UIA|Ready",
  "mark|UIA|sReady",
  "mark|UIAs|Ready",
  "mark|UIAsReady",
  "markUI|As|Ready",
  "markUI|A|Ready",
  "markUI|AsReady",
  "markUIA|s|Ready",
  "markUIA|Ready",
  "markUIA|sReady",
  "markUIAs|Ready",
  "markUIAsReady",
]
`;

exports[`Validate wordSplitter > Extract all possible word breaks to 'well-educated' 1`] = `
[
  "well|educated",
  "well|-educated",
  "well-|educated",
  "well-educated",
]
`;

exports[`Validate wordSplitter > split \`'+flow.tensor'\` in doc 1`] = `
Map {
  "flow" => 1,
  "flow." => 1,
  "tensor" => 1,
  ".tensor" => 1,
  "flow.tensor" => 1,
  "+flow" => 1,
  "+flow." => 1,
  "+flow.tensor" => 1,
}
`;

exports[`Validate wordSplitter > split \`'\\'twas the night'\` in doc 1`] = `
Map {
  "twas" => 1,
  "'twas" => 1,
}
`;

exports[`Validate wordSplitter > split \`'-torch.tensor+64'\` in doc 1`] = `
Map {
  "torch" => 1,
  "tensor" => 1,
  "tensor+" => 1,
  "tensor+64" => 1,
  "torch." => 1,
  ".tensor" => 1,
}
`;

exports[`Validate wordSplitter > split \`'0.7e1-count+56'\` in doc 1`] = `
Map {
  "count" => 1,
}
`;

exports[`Validate wordSplitter > split \`'64-bit'\` in doc 1`] = `
Map {
  "bit" => 1,
}
`;

exports[`Validate wordSplitter > split \`'64bit'\` in doc 1`] = `
Map {
  "bit" => 1,
}
`;

exports[`Validate wordSplitter > split \`'128-bit'\` in doc 1`] = `
Map {
  "bit" => 1,
}
`;

exports[`Validate wordSplitter > split \`'256-sha'\` in doc 1`] = `
Map {
  "sha" => 1,
  "-sha" => 1,
  "256-sha" => 1,
}
`;

exports[`Validate wordSplitter > split \`'REFACTOR\\'d'\` in doc 1`] = `
Map {
  "REFACTOR" => 1,
  "REFACTOR'" => 1,
  "REFACTOR'd" => 1,
}
`;

exports[`Validate wordSplitter > split \`'begin+end29'\` in doc 1`] = `
Map {
  "begin" => 1,
  "end" => 1,
  "end29" => 1,
  "begin+" => 1,
  "+end" => 1,
}
`;

exports[`Validate wordSplitter > split \`'dogs\\''\` in doc 1`] = `
Map {
  "dogs" => 1,
  "dogs'" => 1,
}
`;

exports[`Validate wordSplitter > split \`'êphoneStatic'\` in doc 1`] = `
Map {
  "êphone" => 1,
  "Static" => 1,
}
`;

exports[`Validate wordSplitter > split \`'geschäft'\` in doc 1`] = `
Map {
  "geschäft" => 1,
}
`;

exports[`Validate wordSplitter > split \`'îphoneStatic'\` in doc 1`] = `
Map {
  "îphone" => 1,
  "Static" => 1,
}
`;

exports[`Validate wordSplitter > split \`'n\\'cpp'\` in doc 1`] = `
Map {
  "cpp" => 1,
}
`;

exports[`Validate wordSplitter > split \`'n\\'log'\` in doc 1`] = `
Map {
  "log" => 1,
  "log'" => 1,
  "'log" => 1,
  "'log'" => 1,
  "n" => 1,
  "n'" => 1,
  "n'log" => 1,
  "n'log'" => 1,
}
`;

exports[`Validate wordSplitter > split \`'nstatic'\` in doc 1`] = `
Map {
  "static" => 1,
}
`;

exports[`Validate wordSplitter > split \`'planets’'\` in doc 1`] = `
Map {
  "planets" => 1,
  "planets’" => 1,
}
`;

exports[`Validate wordSplitter > split \`'static'\` in doc 1`] = `
Map {
  "static" => 1,
}
`;

exports[`Validate wordSplitter > split \`'techo'\` in doc 1`] = `
Map {
  "echo" => 1,
}
`;

exports[`Validate wordSplitter > split \`'î\\'cpp'\` in doc 1`] = `
Map {
  "î" => 1,
  "cpp" => 1,
}
`;
